helm/_base_k8s/120_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero-ui
  labels:
    tier: frontend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
      layer: webserver
  template:
    metadata:
      labels:
        tier: frontend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: docker.io/dserio83/velero-ui:0.1.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: run
