helm/_base_k8s/130_service_lb.yaml
# webserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: velero-ui-lb
spec:
  type: LoadBalancer
  loadBalancerIP : "10.10.0.101"
  selector:
    layer: webserver
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: run
