helm/_base_k8s/130_service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-ui-nodeport
spec:
  type: NodePort
  selector:
    layer: webserver
  ports:
    - nodePort: 30002
      port: 3000
      targetPort: 3000
