helm/_base_k8s/40_service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-api-lb
spec:
  type: LoadBalancer
  loadBalancerIP : "10.10.0.100"
  selector:
    app: velero-api
    layer: api
    tier: backend
  ports:
    - name: velero-api-lb
      protocol: TCP
      port: 80
      targetPort: api
