helm/_base_k8s/40_service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-api-nodeport
spec:
  type: NodePort
  selector:
    app: velero-api
    layer: api
    tier: backend
  ports:
    - nodePort: 30001
      port: 8001
      targetPort: 8001
